AM_CXXFLAGS = -I..

noinst_LIBRARIES = libdspfilters.a

libdspfilters_a_SOURCES = Bessel.cpp         Biquad.cpp       Butterworth.cpp  Cascade.cpp \
			  ChebyshevI.cpp     ChebyshevII.cpp  Custom.cpp       Design.cpp \
			  Documentation.cpp  Elliptic.cpp     Filter.cpp       Legendre.cpp \
			  Param.cpp          PoleFilter.cpp   RBJ.cpp          RootFinder.cpp \
			  State.cpp

